Fix hr vertical white space
These accidentaly use `--space-default`.

--- a/src/css/baseline.css
+++ b/src/css/baseline.css
@@ -10,7 +10,7 @@ html {
 /* Sections */
 body {
 	margin: 1.5rem auto;
-	max-width: 36rem;
+	max-width: 640px;
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
 }
@@ -54,7 +54,7 @@ p {
 hr {
 	border-width: 0;
 	letter-spacing: 1rem;
-	margin: 1.5rem 0;
+	margin: 4rem 0;
 	padding-left: 4rem;
 	text-align: left;
 }
