--- a/src/css/core.css
+++ b/src/css/core.css
@@ -65,8 +65,8 @@ table + p {
 
 hr {
 	color: var(--color-foreground-low-contrast);
-	margin-bottom: var(--space-default);
-	margin-top: var(--space-default);
+	margin-bottom: var(--space-large);
+	margin-top: var(--space-large);
 	padding-left: var(--space-large);
 }
 
